<resources>
    <string name="app_name">手遊加速王</string>
    <string name="server_client_id">225058426888-nm9uudh040flkh2771qcbdhc7oripris.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="nwarp_tittle">N-WARP</string>
    <string name="main_game_experience">追求夢想中的遊戲體驗</string>
    <string name="main_login_agree">登入即同意以下條款</string>
    <string name="main_link_user"><u>使用者條款</u></string>
    <string name="main_link_and">與</string>
    <string name="main_link_private"><u>隱私權政策</u></string>
    <string name="search_text">搜尋遊戲名稱</string>
    <string name="cancel_link"><u>取消訂閱</u></string>

    <string name="need_subscribe_list">✔平均遊戲掉包3-5%降為0\n\n✔遊戲網路穩定度提升70%\n\n✔支援多款線上熱門遊戲</string>
    <string name="need_subscribe_have">現在就擁有N-WARP\n讓你玩遊戲不再卡卡</string>
    <string name="need_subscribe_day">/30天</string>
    <string name="need_subscribe_dollar">$300</string>
    <string name="need_subscribe_button">訂閱</string>
    <string name="accelerlator_button">未連線</string>
    <string name="title_activity_accelerator">AcceleratorActivity</string>
    <string name="title">Action Tittle</string>
    <string name="logout_button">登出</string>
    <string name="dialog_tittle">確定要登出嗎？</string>
    <string name="dialog_yes">確定</string>
    <string name="dialog_no">取消</string>

</resources>