<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="80dp"
    android:weightSum="4"
    android:bottomLeftRadius="16dp"
    android:bottomRightRadius="16dp"
    android:topLeftRadius="16dp"
    android:topRightRadius="16dp"
    android:background="@drawable/ic_dialog"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:text="@string/dialog_tittle"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:textSize="14dp"
            android:text="@string/dialog_no"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:textSize="14dp"
            android:text="@string/dialog_yes"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>