<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.forgamers.mobile.accelerator.game.MainActivity"
    android:background="@drawable/ic_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="279.1dp"
        android:layout_height="97.35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="279.1dp"
            android:layout_height="97.35dp"
            android:src="@drawable/ic_imglogomain" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/game_text"
        android:layout_width="218dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_span="3"
        android:gravity="center"
        android:text="@string/main_game_experience"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="248dp"
        android:layout_height="40dp"
        android:layout_span="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_text"
        app:layout_constraintVertical_bias="0.487">
    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/agree_text"
        android:layout_width="144dp"
        android:layout_height="22dp"
        android:layout_span="3"
        android:gravity="center"
        android:text="@string/main_login_agree"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="0.151" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agree_text"
        app:layout_constraintVertical_bias="0.159">

        <TextView
            android:id="@+id/user_link_text"
            android:layout_width="80dp"
            android:layout_height="19dp"
            android:gravity="center"
            android:text="@string/main_link_user"
            android:textSize="14dp"
            android:textColor = "@color/tittle_color"
            app:layout_constraintEnd_toEndOf="@+id/private_link_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/and_link_text"
            android:layout_width="14dp"
            android:layout_height="19dp"
            android:gravity="center"
            android:text="@string/main_link_and"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/private_link_text"
            app:layout_constraintStart_toStartOf="@+id/user_link_text"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/private_link_text"
            android:layout_width="80dp"
            android:layout_height="19dp"
            android:gravity="center"
            android:text="@string/main_link_private"
            android:textSize="14dp"
            android:textColor = "@color/tittle_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>