<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.forgamers.mobile.accelerator.game.ProfileActivity"
    android:background="@drawable/ic_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:cardCornerRadius="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white">

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/profileImage2"
            android:layout_width="28dp"
            android:layout_height="14dp"
            android:src="@drawable/ic_imgpro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.973" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="name"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="email"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="240dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616">

        <TextView
            android:id="@+id/cancel_link_text"
            android:layout_width="60dp"
            android:layout_height="22dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/cancel_link"
            android:textSize="14dp"
            android:textColor = "@color/tittle_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/expired"
            tools:layout_editor_absoluteY="2dp" />

        <TextView
            android:id="@+id/expired"
            android:layout_width="154dp"
            android:layout_height="22dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="expired"
            android:textSize="14dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="122dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721">

        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="122dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_btnlouout"
            android:background="@color/transparent"
            android:text="@string/need_subscribe_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/logout_button"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/logoutBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/logoutBtn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813">

        <TextView
            android:id="@+id/user_link_text"
            android:layout_width="80dp"
            android:layout_height="19dp"
            android:gravity="center"
            android:text="@string/main_link_user"
            android:textSize="14dp"
            android:textColor = "@color/tittle_color"
            app:layout_constraintEnd_toEndOf="@+id/private_link_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/and_link_text"
            android:layout_width="14dp"
            android:layout_height="19dp"
            android:gravity="center"
            android:text="@string/main_link_and"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/private_link_text"
            app:layout_constraintStart_toStartOf="@+id/user_link_text"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/private_link_text"
            android:layout_width="80dp"
            android:layout_height="19dp"
            android:gravity="center"
            android:text="@string/main_link_private"
            android:textSize="14dp"
            android:textColor = "@color/tittle_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>